--- a/local.yml
+++ b/local.yml
@@ -15,6 +15,7 @@ services:
     container_name: restaurant_management_local_django
     depends_on:
       - postgres
+      - redis
     volumes:
       - .:/app:z
     env_file:
